Fix overflow property

--- a/src/styles.css
+++ b/src/styles.css
@@ -334,7 +334,7 @@ nav ul {
   background-color: rgba(248, 248, 248, 0.11);
   padding: 1rem;
   display: block;
-  overflow: none;
+  overflow: hidden;
 }
 
 .game .header {
